<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/name_performance"
        android:layout_width="match_parent"
        android:text="@string/text_view_name"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
    <!--todo вывод списка из бд-->
    <TextView
        android:id="@+id/description_performance"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:text="@string/text_view_description"
        android:layout_height="wrap_content" />
    <!--todo вывод клиентов из бд-->
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_view_date"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/date_performance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        />
</LinearLayout>

    <Button
        android:id="@+id/choose_date"
        android:layout_width="match_parent"
        android:text="@string/choose_date"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@color/back_message_you"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_message_you"
        android:textColor="@color/white"
        android:text="@string/save"
        android:layout_marginTop="15dp"/>
</LinearLayout>