<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:id="@+id/text_view_choose_users"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/text_view_users"
       android:textColor="@color/white"
       android:layout_marginBottom="5dp"/>
    <Spinner
        android:id="@+id/list_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_view_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_view_day"/>

    <Spinner
        android:id="@+id/day_of_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/text_view_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/text_view_time"/>
    <Button
        android:id="@+id/btn_set_time"
        android:layout_width="match_parent"
        android:text="@string/choose_time"
        android:background="@color/back_message_you"
        android:layout_height="wrap_content" />



</LinearLayout>