<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fragment_add_meeting_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TimeTextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_fragment_add_meeting_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:textColor="@color/mainBackground" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_hint"
                android:textColor="@color/mainBackground"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/sp_fragment_add_meet_place"
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fragment_add_meeting_date"
            android:layout_width="@dimen/set_date"
            android:layout_height="wrap_content"
            android:theme="@style/TimeTextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_fragment_add_meeting_date"
                android:layout_width="@dimen/set_date"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_hint"
                android:inputType="time"
                android:textColor="@color/mainBackground" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fragment_add_meeting_start_time"
            android:layout_width="@dimen/set_time"
            android:layout_height="wrap_content"
            android:theme="@style/TimeTextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_fragment_add_meeting_start_time"
                android:layout_width="@dimen/set_time"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/start_time_hint"
                android:inputType="time"
                android:text="@string/start_time"
                android:textColor="@color/mainBackground" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fragment_add_meeting_end_time"
            android:layout_width="@dimen/set_time"
            android:layout_height="wrap_content"
            android:theme="@style/TimeTextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_fragment_add_meeting_end_time"
                android:layout_width="@dimen/set_time"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/end_time_hint"
                android:inputType="time"
                android:text="@string/end_time"
                android:textColor="@color/mainBackground" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            style="@style/MainButton"
            android:id="@+id/acb_fragment_add_meeting_positive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/add" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_fragment_add_meeting_negative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_button_selector"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>