<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:padding="16dp">

        <TextView
            android:id="@+id/profile_text_login"
            android:text="@string/my_profile_login"
            android:textColor="@color/mainBackground"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_text_first_name"
            android:text="@string/my_profile_first_name"
            android:textColor="@color/mainBackground"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_text_last_name"
            android:text="@string/my_profile_last_name"
            android:textColor="@color/mainBackground"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_text_phone"
            android:text="@string/my_profile_phone"
            android:textColor="@color/mainBackground"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/profile_text_status"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="Администратор"
            android:textColor="@color/mainBackground"
        />

</LinearLayout>