<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginBottom="5dp"
        android:text="@string/text_view_agenda"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/backgr_agenda_edit">

        <EditText
            android:id="@+id/agenda_meet_input"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
    </ScrollView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:text="@string/text_view_date"/>
        <TextView
            android:id="@+id/meet_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_meet_set_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:padding="3dp"
        android:background="@color/back_message_you"
        android:text="@string/choose_date"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_message_you"
        android:textColor="@color/white"
        android:text="@string/save"
        android:layout_marginTop="15dp"/>
</LinearLayout>