<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inp_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/mainBackground"
        android:theme="@style/MainTextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_profile_edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_name"
            android:textColor="@color/mainBackground" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inp_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/mainBackground"
        android:theme="@style/MainTextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_profile_edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/my_profile_last_name"
            android:textColor="@color/mainBackground" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inp_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/mainBackground"
        android:theme="@style/MainTextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_profile_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_profile_phone"
            android:inputType="phone"
            android:textColor="@color/mainBackground" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_fragment_edit_profile_save"
            style="@style/MainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/save" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acb_fragment_edit_profile_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_button_selector"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>