<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/mainBackground"
    tools:context=".ui.activity.LaunchActivity">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="@dimen/btns_login_width"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btn_fragment_login_auth"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        style="@style/MainButton"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="@dimen/btns_login_width"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_fragment_login_registration_start"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_below="@id/btn_fragment_login_auth"
        style="@style/MainButton"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_fragment_login_auth"
        android:theme="@style/TextLabel"
        android:id="@+id/til_fragment_login_input_password">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_login_input_password"
            android:layout_width="@dimen/btns_login_width"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@id/til_fragment_login_input_password"
        android:theme="@style/TextLabel">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_login_input_login"
            android:layout_width="@dimen/btns_login_width"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_name" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
