<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inp_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:errorEnabled="true"
        android:textColorHint="@color/mainBackground"
        android:theme="@style/TimeTextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_profile_edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:textColor="@color/mainBackground" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inp_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:errorEnabled="true"
        android:textColorHint="@color/mainBackground"
        android:theme="@style/TimeTextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_profile_edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_profile_last_name"
            android:textColor="@color/mainBackground" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inp_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:errorEnabled="true"
        android:textColorHint="@color/mainBackground"
        android:theme="@style/TimeTextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_profile_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/my_profile_phone"
            android:textColor="@color/mainBackground" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_fragment_profile_save_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="15dp"
        android:text="@string/save"/>

</LinearLayout>