<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_fragment_registration_register_confirm"
        android:layout_width="@dimen/btns_login_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/main_button_selector"
        android:text="@string/register"
        android:textColor="@color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_fragment_registration_cancel"
        android:layout_width="@dimen/btns_login_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_fragment_registration_register_confirm"
        android:background="@drawable/main_button_selector"
        android:text="@string/cancel"
        android:textColor="@color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_fragment_registration_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_fragment_registration_register_confirm"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_registration_input_password"
            android:layout_width="@dimen/btns_login_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="text"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/til_fragment_registration_input_password"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/acet_fragment_registration_input_login"
            android:layout_width="@dimen/btns_login_width"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:inputType="text"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
