<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/mainBackground"
    tools:context="ru.delightfire.delight.fragment.RegistrationKeyCheckFragment">
    <android.support.v7.widget.AppCompatButton
        android:layout_width="@dimen/btns_login_width"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/btn_register_confirm"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_login" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:theme="@style/TextLabel"
        android:layout_above="@id/btn_register_confirm"
        android:id="@+id/input_register_password_layout">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_register_password"
            android:layout_width="@dimen/btns_login_width"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_above="@id/input_register_password_layout"
        android:theme="@style/TextLabel">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_register_login"
            android:layout_width="@dimen/btns_login_width"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_name" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
